; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/core/extr_rtw_pwrctrl.c_PS_RDY_CHECK.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8188eu/core/extr_rtw_pwrctrl.c_PS_RDY_CHECK.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { %struct.TYPE_2__, %struct.mlme_priv, %struct.pwrctrl_priv }
%struct.TYPE_2__ = type { i64, i32 }
%struct.mlme_priv = type { i32 }
%struct.pwrctrl_priv = type { i64, i64 }

@jiffies = common dso_local global i64 0, align 8
@LPS_DELAY_TIME = common dso_local global i64 0, align 8
@_FW_LINKED = common dso_local global i32 0, align 4
@_FW_UNDER_SURVEY = common dso_local global i32 0, align 4
@WIFI_AP_STATE = common dso_local global i32 0, align 4
@WIFI_ADHOC_MASTER_STATE = common dso_local global i32 0, align 4
@WIFI_ADHOC_STATE = common dso_local global i32 0, align 4
@dot11AuthAlgrthm_8021X = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [39 x i8] c"Group handshake still in progress !!!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.adapter*)* @PS_RDY_CHECK to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @PS_RDY_CHECK(%struct.adapter* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.adapter*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.pwrctrl_priv*, align 8
  %7 = alloca %struct.mlme_priv*, align 8
  store %struct.adapter* %0, %struct.adapter** %3, align 8
  %8 = load %struct.adapter*, %struct.adapter** %3, align 8
  %9 = getelementptr inbounds %struct.adapter, %struct.adapter* %8, i32 0, i32 2
  store %struct.pwrctrl_priv* %9, %struct.pwrctrl_priv** %6, align 8
  %10 = load %struct.adapter*, %struct.adapter** %3, align 8
  %11 = getelementptr inbounds %struct.adapter, %struct.adapter* %10, i32 0, i32 1
  store %struct.mlme_priv* %11, %struct.mlme_priv** %7, align 8
  %12 = load i64, i64* @jiffies, align 8
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load %struct.pwrctrl_priv*, %struct.pwrctrl_priv** %6, align 8
  %15 = getelementptr inbounds %struct.pwrctrl_priv, %struct.pwrctrl_priv* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = sub i64 %13, %16
  store i64 %17, i64* %5, align 8
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* @LPS_DELAY_TIME, align 8
  %20 = icmp ult i64 %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %70

22:                                               ; preds = %1
  %23 = load %struct.mlme_priv*, %struct.mlme_priv** %7, align 8
  %24 = load i32, i32* @_FW_LINKED, align 4
  %25 = call i64 @check_fwstate(%struct.mlme_priv* %23, i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %47

27:                                               ; preds = %22
  %28 = load %struct.mlme_priv*, %struct.mlme_priv** %7, align 8
  %29 = load i32, i32* @_FW_UNDER_SURVEY, align 4
  %30 = call i64 @check_fwstate(%struct.mlme_priv* %28, i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %47, label %32

32:                                               ; preds = %27
  %33 = load %struct.mlme_priv*, %struct.mlme_priv** %7, align 8
  %34 = load i32, i32* @WIFI_AP_STATE, align 4
  %35 = call i64 @check_fwstate(%struct.mlme_priv* %33, i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %47, label %37

37:                                               ; preds = %32
  %38 = load %struct.mlme_priv*, %struct.mlme_priv** %7, align 8
  %39 = load i32, i32* @WIFI_ADHOC_MASTER_STATE, align 4
  %40 = call i64 @check_fwstate(%struct.mlme_priv* %38, i32 %39)
  %41 = icmp ne i64 %40, 0
  br i1 %41, label %47, label %42

42:                                               ; preds = %37
  %43 = load %struct.mlme_priv*, %struct.mlme_priv** %7, align 8
  %44 = load i32, i32* @WIFI_ADHOC_STATE, align 4
  %45 = call i64 @check_fwstate(%struct.mlme_priv* %43, i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %48

47:                                               ; preds = %42, %37, %32, %27, %22
  store i32 0, i32* %2, align 4
  br label %70

48:                                               ; preds = %42
  %49 = load %struct.pwrctrl_priv*, %struct.pwrctrl_priv** %6, align 8
  %50 = getelementptr inbounds %struct.pwrctrl_priv, %struct.pwrctrl_priv* %49, i32 0, i32 1
  %51 = load i64, i64* %50, align 8
  %52 = icmp ne i64 %51, 0
  br i1 %52, label %53, label %54

53:                                               ; preds = %48
  store i32 0, i32* %2, align 4
  br label %70

54:                                               ; preds = %48
  %55 = load %struct.adapter*, %struct.adapter** %3, align 8
  %56 = getelementptr inbounds %struct.adapter, %struct.adapter* %55, i32 0, i32 0
  %57 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %56, i32 0, i32 0
  %58 = load i64, i64* %57, align 8
  %59 = load i64, i64* @dot11AuthAlgrthm_8021X, align 8
  %60 = icmp eq i64 %58, %59
  br i1 %60, label %61, label %69

61:                                               ; preds = %54
  %62 = load %struct.adapter*, %struct.adapter** %3, align 8
  %63 = getelementptr inbounds %struct.adapter, %struct.adapter* %62, i32 0, i32 0
  %64 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %63, i32 0, i32 1
  %65 = load i32, i32* %64, align 8
  %66 = icmp ne i32 %65, 0
  br i1 %66, label %69, label %67

67:                                               ; preds = %61
  %68 = call i32 @DBG_88E(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %2, align 4
  br label %70

69:                                               ; preds = %61, %54
  store i32 1, i32* %2, align 4
  br label %70

70:                                               ; preds = %69, %67, %53, %47, %21
  %71 = load i32, i32* %2, align 4
  ret i32 %71
}

declare dso_local i64 @check_fwstate(%struct.mlme_priv*, i32) #1

declare dso_local i32 @DBG_88E(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
